--- a/Frantic/Frantic.csproj
+++ b/Frantic/Frantic.csproj
@@ -125,18 +125,22 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MediaPlayerSingleton.cs" />
     <Compile Include="photo.xaml.cs">
       <DependentUpon>photo.xaml</DependentUpon>
     </Compile>
     <Compile Include="PhotoViewPage.xaml.cs">
       <DependentUpon>PhotoViewPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PlayerPage.xaml.cs">
+      <DependentUpon>PlayerPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="tracks.xaml.cs">
-      <DependentUpon>tracks.xaml</DependentUpon>
+    <Compile Include="MainLibraryPage.xaml.cs">
+      <DependentUpon>MainLibraryPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="video.xaml.cs">
       <DependentUpon>video.xaml</DependentUpon>
@@ -182,11 +186,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="PlayerPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="SettingsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="tracks.xaml">
+    <Page Include="MainLibraryPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
